--- a/notebooks/00_AMLConfiguration.ipynb
+++ b/notebooks/00_AMLConfiguration.ipynb
@@ -18,92 +18,19 @@
     "## Prerequisites\n",
     "\n",
     "If you have already completed the prerequisites and selected the correct Kernel for this notebook, the AML Python SDK \n",
-    "is already installed. Let's load the imports and check the AML SDK version."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
+    "is already installed. Let's load the imports and check the AML SDK version.\n",
     "\n",
-    "import azureml.core\n",
-    "from azure_utils.machine_learning.utils import load_configuration, get_or_create_workspace\n",
-    "\n",
-    "print(\"AML SDK Version:\", azureml.core.VERSION)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Set up your Azure Machine Learning workspace\n",
     "## Load Configurations from file\n",
     "\n",
-    "Configurations are loaded from a file, to prevent accident commits of Azure secerts into source control.\n",
-    "This file name is included in the .gitignore to also prevent accident commits. A template file is included that should\n",
-    "be copied, and each parameter filled in."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cfg = load_configuration(\"../workspace_conf.yml\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Load Configurations into Notebook.\n",
+    "Configurations are loaded by default from a file `project.yml`, to prevent accident commits of Azure secrets into \n",
+    "source control. This file name is included in the `.gitignore` to also prevent accident commits. A template file \n",
+    "is included that should be copied, and each parameter filled in.\n",
     "\n",
-    "The following cell loads the configurations from the local file, into the notebook memory. The following cell is also\n",
-    "marked as a parameter cell. When using this notebook with [papermill](https://github.com/nteract/papermill), these\n",
-    "parameters can be override. See the tests for examples."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "subscription_id = cfg['subscription_id']\n",
-    "resource_group = cfg['resource_group']\n",
-    "workspace_name = cfg['workspace_name']\n",
-    "workspace_region = cfg['workspace_region']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "If the file is not present, and UI Prompt will pop up to insert configurations, and save to the file.\n",
+    "\n",
     "## Create the workspace\n",
-    "This cell will create an AML workspace for you in a subscription, provided you have the correct permissions.\n",
+    "This cell will also create an AML workspace for you in a subscription, provided you have the correct permissions.\n",
     "\n",
     "This will fail when:\n",
     "1. You do not have permission to create a workspace in the resource group\n",
@@ -112,7 +39,9 @@
     "subscription\n",
     "\n",
     "If workspace creation fails, please work with your IT admin to provide you with the appropriate permissions or to \n",
-    "provision the required resources. If this cell succeeds, you're done configuring AML!\n"
+    "provision the required resources. If this cell succeeds, you're done configuring AML!\n",
+    "\n",
+    "After creation we will check the details of the workspace."
    ]
   },
   {
@@ -125,43 +54,17 @@
    },
    "outputs": [],
    "source": [
-    "ws = get_or_create_workspace(workspace_name, subscription_id, resource_group, workspace_region)\n",
-    "ws_json = ws.get_details()"
+    "from azure_utils.machine_learning.utils import get_or_create_workspace_from_file\n",
+    "\n",
+    "ws = get_or_create_workspace_from_file()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Let's check the details of the workspace."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(json.dumps(ws_json, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "You are now ready to move on to the [AutoML Local](01_DataPrep.ipynb) notebook."
+    "We can now move on to [Data Preperation](01_DataPrep.ipynb) notebook to train our model using Azure Machine \n",
+    "Learning."
    ]
   }
  ],
@@ -172,25 +75,13 @@
    "language": "python",
    "name": "az-ml-realtime-score"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
-  },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
