--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -21,10 +21,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import pandas as pd\n",
     "\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azure_utils.utilities import text_to_json\n",
     "from azureml.core.model import Model"
    ]
   },
@@ -107,8 +105,6 @@
    "source": [
     "%%writefile score.py\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
     "import json\n",
     "import logging\n",
     "import timeit as t\n",
@@ -122,9 +118,9 @@
     "    start = t.default_timer()\n",
     "    model = DuplicateModel(model_path, questions_path)\n",
     "    end = t.default_timer()\n",
-    "    loadTimeMsg = \"Model loading time: {0} ms\".format(\n",
+    "    load_time_msg = \"Model loading time: {0} ms\".format(\n",
     "        round((end - start) * 1000, 2))\n",
-    "    logger.info(loadTimeMsg)\n",
+    "    logger.info(load_time_msg)\n",
     "\n",
     "\n",
     "def run(body):\n",
@@ -137,6 +133,18 @@
     "    logger.info(\"Prediction took {0} ms\".format(round((end - start) * 1000,\n",
     "                                                      2)))\n",
     "    return json.dumps(resp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "We can now move on to [Create Image](04_CreateImage.ipynb) notebook to train our model using \n",
+    "Azure Machine Learning.\n"
    ]
   }
  ],
