--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -20,50 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azure_utils.machine_learning.utils import load_configuration, get_workspace_from_config\n",
-    "from azure_utils.utilities import text_to_json\n",
-    "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from azureml.core.model import Model\n",
-    "from notebooks import DIRECTORY\n",
-    "\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "source": [
-    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
-    "values in the following cell with your information."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg = load_configuration(\"../workspace_conf.yml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "image_name = cfg['image_name']"
+    "from azure_utils.machine_learning.realtime.image import get_or_create_image, lightgbm_test_image_locally, get_model\n",
+    "from notebooks import directory"
    ]
   },
   {
@@ -74,45 +32,8 @@
     }
    },
    "source": [
-    "## Get workspace\n",
-    "Load existing workspace from the config file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ws = get_workspace_from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "source": [
-    "## Load model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = 'question_match_model'\n",
-    "\n",
-    "model = Model(ws, name=model_name)\n",
-    "print(model.name, model.version)"
+    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
+    "values in the following cell with your information."
    ]
   },
   {
@@ -133,14 +54,12 @@
     "%%writefile score.py\n",
     "\n",
     "import sys\n",
-    "import pandas as pd\n",
     "import json\n",
     "import logging\n",
     "import timeit as t\n",
-    "from sklearn.externals import joblib\n",
     "from azureml.core.model import Model\n",
     "from azureml.contrib.services.aml_request import rawhttp\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from azureml.contrib.services.aml_response import AMLResponse\n",
     "from azure_utils.machine_learning.duplicate_model import DuplicateModel\n",
     "\n",
     "sys.path.append('./scripts/')\n",
@@ -155,9 +74,9 @@
     "    start = t.default_timer()\n",
     "    model = DuplicateModel(model_path, questions_path)\n",
     "    end = t.default_timer()\n",
-    "    loadTimeMsg = \"Model loading time: {0} ms\".format(\n",
+    "    load_time_msg = \"Model loading time: {0} ms\".format(\n",
     "        round((end - start) * 1000, 2))\n",
-    "    logger.info(loadTimeMsg)\n",
+    "    logger.info(load_time_msg)\n",
     "\n",
     "\n",
     "@rawhttp\n",
@@ -175,7 +94,7 @@
     "        end = t.default_timer()\n",
     "        logger.info(\"Prediction took {0} ms\".format(\n",
     "            round((end - start) * 1000, 2)))\n",
-    "        return (json.dumps(resp))\n",
+    "        return json.dumps(resp)\n",
     "    if request.method == 'GET':\n",
     "        resp_body = {\n",
     "            \"azEnvironment\": \"Azure\",\n",
@@ -191,7 +110,7 @@
     "            \"isServer\": False,\n",
     "            \"version\": \"\"\n",
     "        }\n",
-    "        return (resp_body)\n",
+    "        return resp_body\n",
     "    return AMLResponse(\"bad request\", 500)"
    ]
   },
@@ -199,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's specifiy the conda and pip dependencies for the image."
+    "Let's specify the conda and pip dependencies for the image."
    ]
   },
   {
@@ -208,99 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\n",
-    "    \"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"azureml-contrib-services\", \n",
-    "    \"Microsoft-AI-Azure-Utility-Samples\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgbmenv = CondaDependencies.create(conda_packages=conda_pack,\n",
-    "                                   pip_packages=requirements)\n",
+    "dependencies = [\"./notebooks/data_folder/questions.tsv\"]\n",
+    "models = [get_model(model_name='question_match_model')]\n",
     "\n",
-    "with open(\"lgbmenv.yml\", \"w\") as f:\n",
-    "    f.write(lgbmenv.serialize_to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core.image import ContainerImage\n",
-    "\n",
-    "image_config = ContainerImage.image_configuration(\n",
-    "    execution_script=\"score.py\",\n",
-    "    runtime=\"python\",\n",
-    "    conda_file=\"lgbmenv.yml\",\n",
-    "    description=\"Image with lightgbm model\",\n",
-    "    tags={\n",
-    "        \"area\": \"text\",\n",
-    "        \"type\": \"lightgbm\"\n",
-    "    },\n",
-    "    dependencies=[\n",
-    "        \"./notebooks/data_folder/questions.tsv\"\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "image = ContainerImage.create(\n",
-    "    name=image_name,\n",
-    "    # this is the model object\n",
-    "    models=[model],\n",
-    "    image_config=image_config,\n",
-    "    workspace=ws,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.wait_for_creation(show_output=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(image.name, image.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_version = str(image.version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can find the logs of image creation in the following location."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.image_build_log_uri"
+    "image = get_or_create_image(models=models, dependencies=dependencies)"
    ]
   },
   {
@@ -323,40 +153,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes_test_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
-    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0, 4]\n",
-    "text_to_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_text = text_to_json(text_to_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.run(input_data=json_text)"
+    "lightgbm_test_image_locally(image, directory)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Conclusion\n",
     "\n",
-    "We have created a docker Image using AzureML and registred this image on Azure Container Registry (ACR). This docker \n",
-    "image encapsulates a trained machine learning model and scoring scripts. In the next step, we can take this image \n",
-    "and deploy it on the compute target of your choice: Azure Kubernetes Service (AKS) Cluster or Azure IoT Edge."
+    "We can now move on to [Deploy on Azure Kubernetes Service](05_DeployOnAKS.ipynb) notebook. "
    ]
   }
  ],
