--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -22,10 +22,11 @@
    "outputs": [],
    "source": [
     "from urllib.parse import urlparse\n",
+    "import pandas as pd\n",
     "\n",
+    "from azure_utils.configuration.project_configuration import ProjectConfiguration\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import get_key"
+    "from azureml.core.webservice import AksWebservice"
    ]
   },
   {
@@ -51,7 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aks_service_name = get_key(env_path, 'aks_service_name')\n",
+    "project_configuration = ProjectConfiguration(\"project.yml\")\n",
+    "aks_service_name = project_configuration.get_settings('aks_service_name')\n",
     "aks_service = AksWebservice(ws, name=aks_service_name)"
    ]
   },
@@ -74,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "CONCURRENT_REQUESTS = 4  # Number of requests at a time"
+    "concurrent_requests = 4  # Number of requests at a time"
    ]
   },
   {
@@ -164,7 +166,7 @@
     "parsed_url = urlparse(scoring_url)\n",
     "cmd = \"locust -H {host} --no-web -c {users} -r {rate} -t {duration} --csv=modeltest --only-summary\".format(\n",
     "    host=\"{url.scheme}://{url.netloc}\".format(url=parsed_url),\n",
-    "    users=CONCURRENT_REQUESTS,  # concurrent users\n",
+    "    users=concurrent_requests,  # concurrent users\n",
     "    rate=10,  # hatch rate (users / second)\n",
     "    duration='1m',  # test duration\n",
     ")"
@@ -238,10 +240,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
