--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -75,12 +75,12 @@
     "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from azureml.core.webservice import AksWebservice\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv\n",
+    "from azure_utils.configuration.project_configuration import ProjectConfiguration\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azure_utils.utilities import read_questions, text_to_json, get_auth\n",
-    "from notebooks import DIRECTORY"
+    "from azure_utils.utilities import read_questions, text_to_json\n",
+    "from azureml.core.webservice import AksWebservice\n",
+    "\n",
+    "from notebooks import directory"
    ]
   },
   {
@@ -99,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aks_service_name = get_key(env_path, 'aks_service_name')\n",
-    "aks_service = AksWebservice(ws, name=aks_service_name)\n",
-    "aks_service.name"
+    "project_configuration = ProjectConfiguration(\"project.yml\")\n",
+    "aks_service_name = project_configuration.get_settings('aks_service_name')\n",
+    "aks_service = AksWebservice(ws, name=aks_service_name)\n"
    ]
   },
   {
@@ -162,17 +162,17 @@
    "outputs": [],
    "source": [
     "def buttons_and_texts(data,\n",
-    "                      id,\n",
+    "                      text_id,\n",
     "                      answerid,\n",
     "                      text,\n",
     "                      handle_click,\n",
     "                      layout=widgets.Layout(width=\"100%\"),\n",
-    "                      n=15):\n",
+    "                      num=15):\n",
     "    \"\"\"Construct buttons, text areas, and a mapping from IDs to text areas.\"\"\"\n",
     "    items = []\n",
     "    text_map = {}\n",
-    "    for i in range(min(n, len(data))):\n",
-    "        button = widgets.Button(description=data.iloc[i][id])\n",
+    "    for i in range(min(num, len(data))):\n",
+    "        button = widgets.Button(description=data.iloc[i][text_id])\n",
     "        button.answerid = data.iloc[i][answerid] if answerid in data else None\n",
     "        button.open = False\n",
     "        button.on_click(handle_click)\n",
@@ -223,18 +223,14 @@
    },
    "outputs": [],
    "source": [
-    "def duplicates_questions_widget(duplicates,\n",
-    "                                questions,\n",
-    "                                layout=widgets.Layout(width=\"100%\")):\n",
+    "def duplicates_questions_widget( layout=widgets.Layout(width=\"100%\")):\n",
     "    \"\"\"Construct a duplicates and questions exploration widget.\"\"\"\n",
     "    # Construct the duplicates Tab of buttons and text areas.\n",
-    "    duplicates_items, duplicates_map = buttons_and_texts(\n",
+    "    duplicates_items, duplicates_map_inner = buttons_and_texts(\n",
     "        duplicates,\n",
     "        duplicates_id,\n",
     "        duplicates_answerid,\n",
-    "        duplicates_text,\n",
-    "        duplicates_click,\n",
-    "        n=duplicates.shape[0],\n",
+    "        duplicates_click\n",
     "    )\n",
     "    duplicates_tab = widgets.Tab(\n",
     "        [widgets.VBox(duplicates_items, layout=layout)],\n",
@@ -242,13 +238,12 @@
     "    )\n",
     "    duplicates_tab.set_title(0, duplicates_title)\n",
     "    # Construct the questions Tab of buttons and text areas.\n",
-    "    questions_items, questions_map = buttons_and_texts(\n",
+    "    questions_items, questions_map_inner = buttons_and_texts(\n",
     "        questions,\n",
     "        questions_id,\n",
     "        questions_answerid,\n",
     "        questions_text,\n",
-    "        questions_click,\n",
-    "        n=questions.shape[0],\n",
+    "        questions_click\n",
     "    )\n",
     "    questions_tab = widgets.Tab(\n",
     "        [widgets.VBox(questions_items, layout=layout)],\n",
@@ -256,9 +251,8 @@
     "    )\n",
     "    questions_tab.set_title(0, questions_title)\n",
     "    # Put both tabs in an HBox.\n",
-    "    duplicates_questions = widgets.HBox([duplicates_tab, questions_tab],\n",
-    "                                        layout=layout)\n",
-    "    return duplicates_map, questions_map, duplicates_questions"
+    "    duplicates_questions_inner = widgets.HBox([duplicates_tab, questions_tab], layout=layout)\n",
+    "    return duplicates_map_inner, questions_map_inner, duplicates_questions_inner"
    ]
   },
   {
@@ -384,8 +378,7 @@
     "            questions_id,\n",
     "            questions_answerid,\n",
     "            questions_text,\n",
-    "            questions_click,\n",
-    "            n=questions_display,\n",
+    "            questions_click\n",
     "        )\n",
     "        if questions_button_color is True and selected_button.answerid is not None:\n",
     "            set_button_color(questions_items[::2], selected_button.answerid)\n",
@@ -399,25 +392,23 @@
     "        duplicates_questions.children[1].set_title(0,\n",
     "                                                   selected_button.description)\n",
     "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "    return False\n",
     "\n",
     "\n",
     "def add_button_prob(button, questions_scores):\n",
     "    \"\"\"Return an HBox containing button and its probability.\"\"\"\n",
-    "    id = button.description\n",
+    "    button_id = button.description\n",
     "    prob = widgets.Label(score_label + \": \" + str(\n",
     "        int(\n",
     "            math.ceil(score_scale *\n",
-    "                      questions_scores.loc[id][questions_probability]))))\n",
+    "                      questions_scores.loc[button_id][questions_probability]))))\n",
     "    return widgets.HBox([button, prob])\n",
     "\n",
     "\n",
     "def set_button_color(button, answerid):\n",
     "    \"\"\"Set each button's color according to its label.\"\"\"\n",
-    "    for i in range(len(button)):\n",
-    "        button[i].style.button_color = (\n",
-    "            \"lightgreen\" if button[i].answerid == answerid else None)"
+    "    for a_button in button:\n",
+    "        a_button.style.button_color = (\"lightgreen\" if a_button.answerid == answerid else None)"
    ]
   },
   {
@@ -439,11 +430,9 @@
     "        \"content-type\": \"application/json\",\n",
     "        \"Authorization\": (\"Bearer \" + api_key),\n",
     "    }\n",
-    "    #     jsontext = json.dumps({'input':'{0}'.format(text)})\n",
     "    jsontext = text_to_json(text)\n",
     "    result = requests.post(scoring_url, data=jsontext, headers=headers)\n",
-    "    #     scores = result.json()['result'][0]\n",
-    "    scores = eval(result.json())\n",
+    "    scores = result.json()\n",
     "    scores_df = pd.DataFrame(\n",
     "        scores,\n",
     "        columns=[questions_id, questions_answerid, questions_probability])\n",
@@ -547,7 +536,7 @@
     "questions_answerid = 'AnswerId'\n",
     "questions_text = 'Text'\n",
     "questions_probability = 'Probability'\n",
-    "questions_path = DIRECTORY + '/data_folder/questions.tsv'\n",
+    "questions_path = directory + '/data_folder/questions.tsv'\n",
     "questions = read_questions(questions_path, questions_id, questions_answerid)"
    ]
   },
@@ -591,8 +580,7 @@
     "duplicates_title = 'Duplicates'\n",
     "duplicates_id = 'Id'\n",
     "duplicates_answerid = 'AnswerId'\n",
-    "duplicates_text = 'Text'\n",
-    "duplicates_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
+    "duplicates_path = directory + '/data_folder/dupes_test.tsv'\n",
     "duplicates = read_questions(duplicates_path, duplicates_id, duplicates_answerid)"
    ]
   },
@@ -729,10 +717,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
